hostpath-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-pod
spec:
  containers:
  - image: nginx:alpine
    name: test-container
    volumeMounts:
    - mountPath: /host-path
      name: host-volume
  volumes:
  - name: host-volume
    hostPath:
      path: /
