pod-v1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-v1
  labels:
    app: myapp-pod-v1
spec:
  volumes:
  - name: vol-page
    emptyDir: {}
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: vol-page
