service-v1.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: pod-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp-pod-v1
    versao: v1
    pais: brazil
