ingress-frontend.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  labels:
    app: ingress
spec:
  rules:
  - host: "login.virtualti.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
