allow-external-frontend.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-allow-external
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
  - ports:
    - port: 80
    from: []
